k8/homer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer-deployment
spec:
  selector:
    matchLabels:
      app: homer-deployment
  template:
    metadata:
      labels:
        app: homer-deployment
    spec:
      containers:
        - name: homer
          image: b4bz/homer:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /www/assets
              name: homer-volume
      volumes:
        - name: homer-volume
          nfs:
            server: 192.168.2.7
            path: /volume1/Containers/apps/homer/assets
