k8/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer-service
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: homer-deployment
