k8/homer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer-ingress
spec:
  rules:
  - host: homer.k8.hiroyagojo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homer-service
            port:
              name: http
